# RemotePowerSupply

Arduino/RemotePowerSupply/: .cproject  .gitignore  .project  RemotePowerSupply.ino
Qt/RemotePowerSupply/: .gitignore  CMakeLists.txt  PowerSupplyM.cpp  PowerSupplyM.h  README.md  RemotePowerSupply.pro  SerialClient.cpp  SerialClient.h  SerialComM.cpp  SerialComM.h  TcpComM.cpp  TcpComM.h  deploy.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/RemotePowerSupply/res/: resources.qrc  win.rc
Qt/RemotePowerSupply/src/: PowerSupplyM.cpp  SerialComM.h  TcpComM.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/RemotePowerSupply/src/app/: PowerSupplyM.cpp
Qt/RemotePowerSupply/src/core/: Logger.cpp  Logger.h
Qt/RemotePowerSupply/src/drivers/: SerialComM.cpp  SerialComM.h  TcpComM.cpp  TcpComM.h
Qt/RemotePowerSupply/src/utils/: utils.cpp  utils.h
Qt/RemotePowerSupply/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
